Projeto/Compilador/tests/cases/ok/T36_Procedure_sem_par_nteses.pas
program T36;
procedure P();
begin
end;
begin
  P;
end.
