Projeto/Compilador/tests/cases/error/T1.pas
program T1;
begin
  x := 1;
end.
